[package]
name = "ramp_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomecs ={ path = "../AtomECS" }
atomecs-derive = "0.1.0"
rayon = "1.5.0"
specs={ version="0.17.0", features=["rayon"] }
specs-derive = "0.4.1"
rand = "0.8.3"
rand_distr = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.9"
assert_approx_eq = "1.1.0"
nalgebra = { version = "^0.31.0", features = ["serde-serialize"] }
csv = "1.1"
byteorder = "1.3.2"
multimap = "0.8.2"
hashbrown = { version = "^0.12.1", features = ["rayon"] }
serde_arrays = "0.1.0"
